add new Howl, refactor soudMute and author informations

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web application created using create-react-app, 
       this app aims to help you breathe better"
     />
+     <meta name="author" content="Sylvana MELENS">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
